<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="MissingConstraints,Orientation"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textbanner_login"
            android:textStyle="bold"
            android:textColor="#03A9F4"
            android:textSize="23dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textbanner2_login"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#AEAEAE"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title1_login"
            android:textColor="@color/black"

            />
        <EditText
            android:id="@+id/txt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content1"
            android:textColorHint="#66000000"
            android:textColor="@color/black"
            android:inputType="text"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:textSize="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#AEAEAE"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title2_login"


            android:textColor="@color/black"

            />
        <EditText
            android:id="@+id/txt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content2"

            android:textColor="@color/black"
            android:inputType="textPassword"

            />
    </LinearLayout>
    <CheckBox
        android:id="@+id/cbk_luu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ckb_save"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <Button
        android:id="@+id/btn_nut1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF5722"
        android:text="Đăng ký"
        />
    <Button
        android:id="@+id/btn_nut2"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:text="Đăng nhập"
        />
</LinearLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>