<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="MissingConstraints,Orientation"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textbanner_sign"
            android:textStyle="bold"

            android:textColor="#03A9F4"
            android:textSize="23dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textbanner2_sign"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#AEAEAE"

        >

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content1"
            android:inputType="text"
            android:textColorHint="#FF9800"
            android:textColor="#FF9800"


            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:textSize="10dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#AEAEAE"

        >

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content2"
            android:textColorHint="#FF9800"
            android:textColor="#FF9800"
            android:inputType="textPassword"

            />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:textSize="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#AEAEAE"

        >

        <EditText
            android:id="@+id/edt_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content3"
            android:textColorHint="#FF9800"
            android:textColor="#FF9800"
            android:inputType="textPassword"

            />

    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/btn_dangnhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#03A9F4"
        android:text="@string/login"
        />
    <Button
        android:id="@+id/btn_treve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#434343"
        android:text="@string/back"
        />

</LinearLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>