<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"
        android:id="@+id/tb_menu"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Orientation"
            android:orientation="vertical"


            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/QLNS"
                android:textSize="30dp"
                android:textColor="#8BC34A"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt1_begin"
                android:textSize="20dp"
                android:gravity="center"
                android:textColor="#FF5722"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <Button
                android:id="@+id/btn_pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PB_btn"
                android:drawableTop="@drawable/baseline_maps_home_work_24"
                android:textColor="#FF0000"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="#ACACAC"
                />
            <Button
                android:id="@+id/btn_nv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NV_btn"
                android:drawableTop="@drawable/baseline_person_24"
                android:textColor="#0022FF"
                android:textStyle="bold"
                android:backgroundTint="#ACACAC"
                android:layout_marginLeft="5dp"
                android:textSize="20dp"
                />

        </LinearLayout>
        <Button
            android:id="@+id/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Exit_btn"
            android:drawableTop="@drawable/baseline_output_24"
            android:textColor="#000000"
            android:textStyle="bold"
            android:backgroundTint="#ACACAC"
            android:layout_marginLeft="5dp"
            android:textSize="20dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>